# kage

./: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_JA.md  GEMINI.md  README.md  README_JA.md  install.sh  main.py  pyproject.toml
.agents/memories/: overview.md
.gemini/: settings.json
.github/workflows/: prepare-release.yml  publish-release.yml
.kage/tasks/: sample.toml
.rulesync/rules/: overview.md
.wt/: .gitignore  README.md  config.toml  post-add
docs/proposal/: 2026-03-08-global-unified-dashboard.md  2026-03-08-hitl-approval-workflow.md  2026-03-08-notification-artifacts.md  2026-03-08-task-dependency-dag.md  2026-03-09-dry-run-mode.md  2026-03-09-dynamic-context-variables.md  2026-03-09-execution-timeout.md  2026-03-09-self-healing-on-failure.md  2026-03-09-timezone-and-hour-constraints.md  2026-03-10-api-budget-limit.md  2026-03-10-live-execution-streaming.md  2026-03-10-memory-auto-compaction.md  2026-03-10-provider-fallback.md  2026-03-10-task-execution-sandbox.md  2026-03-11-auto-pr-creation.md  2026-03-11-conditional-execution-on-file-change.md  2026-03-11-task-pause-resume.md  2026-03-12-context-attachments.md  (+8 more)
scripts/: __init__.py  release.py
tests/: test_agent.py  test_agent_isolation.py  test_chat.py  test_compiler.py  test_completion.py  test_connectors.py  test_executor.py  test_install_migrations.py  test_install_migrations_agent.py  test_memory.py  test_parser.py  test_quest.py  test_rate_limit.py  test_release.py  test_runs_cli.py  test_scheduler.py  test_stop_feature.py  test_suspension.py  test_task_working_dir.py  test_tui.py  test_web.py
(+47 files in other folders)
