[project]
name = "kage-ai"
version = "0.1.10"
description = "AI-native cron task runner for per-project scheduled prompts and commands."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "croniter>=6.0.0",
    "fastapi>=0.131.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "tomlkit>=0.14.0",
    "typer>=0.24.1",
    "tzdata>=2025.3",
    "uvicorn>=0.41.0",
]

[project.scripts]
kage = "kage.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kage"]
include = ["src/kage/default_config.toml"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
